chore: rename from "distr.sh" to "Distr"
Signed-off-by: Jakob Steiner <jakob.steiner@glasskube.eu>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>distr.sh - Software Distribution Platform</title>
+    <title>Distr - Software Distribution Platform</title>
     <script>
       (() => {
         const getColorSchemeQuery = () =>
@@ -40,7 +40,7 @@
             New
           </span>
           <span class="text-sm font-medium">
-            distr.sh v1 was just released on GitHub
+            Distr v1 was just released on GitHub
           </span>
           <svg
             class="ml-2 w-5 h-5"
@@ -59,7 +59,7 @@
         </h1>
         <p
           class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">
-          distr.sh is an Open-Source Software Distribution Platform helping
+          Distr is an Open-Source Software Distribution Platform helping
           software vendors distribute their software to enterprises on-prem.
           Customers use us to manage applications and agent components in
           customer controlled environments.
