docs: clarify docs
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@
         </h1>
         <p
           class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">
-          distr.sh is an Open-Source Software Distribution Platform helping
+          distr.sh is an Open Source Software Distribution Platform helping
           software vendors distribute their software to enterprises on-prem.
           Customers use us to manage applications and agent components in
           customer controlled environments.
