chore: rename cta
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -106,10 +106,10 @@
             Book a demo
           </a>
           <a
-            href="https://app.distr.sh/register"
+            href="https://signup.distr.sh"
             target="_blank"
             class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
-            Get started free
+            Get started for free
           </a>
         </div>
         <div
