--- a/src/components/NavBarCta.astro
+++ b/src/components/NavBarCta.astro
@@ -15,8 +15,8 @@ Get a demo
   </span>
 </a>
 
-<a href="https://app.distr.sh/register"
+<a href="https://signup.distr.sh"
    target="_blank"
    class="text-white no-underline text-xs bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg px-5 py-2.5 text-center">
-  Get started free
+  Get started for free
 </a>
