fix: frontpage in light mode
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@
           target="_blank"
           class="inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm text-gray-700 bg-gray-100 rounded-full dark:bg-gray-800 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-700">
           <span
-            class="text-xs bg-primary-600 rounded-full text-white px-4 py-1.5 mr-3">
+            class="text-xs bg-primary-600 rounded-full text-gray-900 dark:text-white px-4 py-1.5 mr-3">
             New
           </span>
           <span class="text-sm font-medium">
@@ -96,13 +96,13 @@
           <a
             href="/docs"
             target="_blank"
-            class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+            class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 dark:text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
             Read the docs
           </a>
           <a
             href="https://cal.glasskube.com/team/gk/demo"
             target="_blank"
-            class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+            class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 dark:text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
             Book a demo
           </a>
           <a
