docs: add Login button
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/components/NavBarCta.astro
+++ b/src/components/NavBarCta.astro
@@ -20,3 +20,10 @@ Get a demo
    class="text-white no-underline text-xs bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg px-5 py-2.5 text-center">
   Get started for free
 </a>
+
+<a href="https://app.distr.sh"
+   target="_blank"
+   class="font-medium accent-current hover:underline">
+  Login
+</a>
+
