--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,8 +53,34 @@
         ui_host: 'https://eu.posthog.com',
       })</script>
   </head>
-  <body class="m-0">
-    <section class="bg-white dark:bg-gray-900 m-0 min-h-screen">
+  <body class="bg-white dark:bg-gray-900 m-0 min-h-screen">
+    <header class="bg-white dark:bg-gray-900">
+      <nav class="px-4 lg:px-6 py-2.5">
+        <div class="flex flex-wrap justify-end items-center">
+          <a href="https://cal.glasskube.com/team/gk/demo"
+             target="_blank"
+             class="relative no-underline text-xs inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg no-underline group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800">
+            <span
+              class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0 ">
+              Get a demo
+            </span>
+          </a>
+          <a href="https://signup.distr.sh"
+             target="_blank"
+             class="ml-6 text-white no-underline text-xs bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg px-5 py-2.5 text-center">
+            Get started for free
+          </a>
+
+          <a href="https://app.distr.sh"
+             target="_blank"
+             class="font-medium text-blue-500 hover:underline ml-6">
+            Login
+          </a>
+
+        </div>
+      </nav>
+    </header>
+    <section class="bg-white dark:bg-gray-900 min-h-screen">
       <div
         class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12"
         role="alert">
@@ -95,21 +121,8 @@
           class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
           <a
             href="/docs"
-            target="_blank"
-            class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 dark:text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
-            Read the docs
-          </a>
-          <a
-            href="https://cal.glasskube.com/team/gk/demo"
-            target="_blank"
-            class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 dark:text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
-            Book a demo
-          </a>
-          <a
-            href="https://signup.distr.sh"
-            target="_blank"
             class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
-            Get started for free
+            Read the docs
           </a>
         </div>
         <div
