--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,9 @@
 /*https://tailwindcss.com/docs/adding-custom-styles#using-custom-css*/
 
 @layer distr {
-  h1, h2, h3 {
+  h1,
+  h2,
+  h3 {
     font-family: var(--font-display);
   }
 }
