feat: migrate front page from glasskube to distr
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,8 @@
 @import 'tailwindcss/theme.css' layer(theme);
 @import 'tailwindcss/utilities.css' layer(utilities);
 
+@import 'tailwindcss';
+
 @import '@fontsource/inter/latin-300.css';
 @import '@fontsource/inter/latin-400.css';
 @import '@fontsource/inter/latin-600.css';
