chore: remove tracking, fix ThemedImage component reference
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/components/home/HeroCarousel.astro
+++ b/src/components/home/HeroCarousel.astro
@@ -1,6 +1,6 @@
 ---
 import ThemedImage from '../util/ThemedImage.astro';
-import {images} from '../../assets/index';
+import {images} from '../../assets';
 
 const slides = [
   {
