--- a/src/components/DistrFooter.astro
+++ b/src/components/DistrFooter.astro
@@ -93,9 +93,7 @@ import hyprmcpWhite from '../assets/distr.svg';
           </li>
           <li>
             <a
-              href="https://glasskube.dev/contact/"
-              target="_blank"
-              rel="noopener noreferrer"
+              href="/contact/"
               class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
               Contact
             </a>
