--- a/src/components/pricing/PricingComparisonTable.astro
+++ b/src/components/pricing/PricingComparisonTable.astro
@@ -7,7 +7,13 @@
     <div class="mt-16 mx-auto">
       <h2 class="text-center mb-8 text-3xl font-bold">Compare Features</h2>
       <div class="overflow-x-auto">
-        <table class="w-full border-collapse">
+        <table class="w-full border-collapse table-fixed">
+          <colgroup>
+            <col style="width: 25%;" />
+            <col style="width: 25%;" />
+            <col style="width: 25%;" />
+            <col style="width: 25%;" />
+          </colgroup>
           <thead>
             <tr>
               <th
