--- a/src/components/DistrFooter.astro
+++ b/src/components/DistrFooter.astro
@@ -108,6 +108,13 @@ import hyprmcpWhite from '../assets/distr.svg';
               Glossary
             </a>
           </li>
+          <li>
+            <a
+              href="/whitepaper/"
+              class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
+              White Paper
+            </a>
+          </li>
         </ul>
       </div>
 
