chore: improve whitepaper
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/pages/white-paper/building-blocks/index.astro
+++ b/src/pages/white-paper/building-blocks/index.astro
@@ -1,10 +1,10 @@
 ---
-import StarlightLayout from '../layouts/StarlightLayout.astro';
-import WhitePaperForm from '../components/WhitePaperForm.tsx';
-import TestimonialsSection from '../components/home/TestimonialsSection.astro';
-import CTASection from '../components/home/CTASection.astro';
+import StarlightLayout from '../../../layouts/StarlightLayout.astro';
+import WhitePaperForm from '../../../components/WhitePaperForm.tsx';
+import TestimonialsSection from '../../../components/home/TestimonialsSection.astro';
+import CTASection from '../../../components/home/CTASection.astro';
 import {Image} from 'astro:assets';
-import whitepaperImage from '../assets/white-paper/Glasskube Building Blocks White Paper Teaser.png';
+import whitepaperImage from '../../../assets/white-paper/building-blocks-teaser.png';
 
 const TITLE = 'Building Blocks for Modern Self-Managed Software Distribution';
 const DESCRIPTION =
