--- a/src/components/DistrFooter.astro
+++ b/src/components/DistrFooter.astro
@@ -110,7 +110,7 @@ import hyprmcpWhite from '../assets/distr.svg';
           </li>
           <li>
             <a
-              href="/whitepaper/"
+              href="/white-paper/building-blocks/"
               class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
               White Paper
             </a>
