chore: migrate assets to assets folder
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
-import HeroSection from '../components/home/HeroSection.astro';
-import LogoSlider from '../components/home/LogoSlider.astro';
+import HeroSection from '~/components/home/HeroSection.astro';
 import FeaturesSection from '../components/home/FeaturesSection.astro';
 import ProductsSection from '../components/home/ProductsSection.astro';
 import VideoSection from '../components/home/VideoSection.astro';
@@ -14,7 +13,6 @@ import StarlightLayout from '../layouts/StarlightLayout.astro';
   title="Distribute your application to self-managed customers - Distr"
   description="Featuring a GUI and a CLI. Glasskube packages are dependency aware, GitOps ready and get automatic updates via a central public package repository.">
   <HeroSection />
-  <LogoSlider />
   <FeaturesSection />
   <ProductsSection />
   <VideoSection />
