--- a/src/layouts/StarlightLayout.astro
+++ b/src/layouts/StarlightLayout.astro
@@ -10,5 +10,7 @@ const {title, description} = Astro.props;
 ---
 
 <StarlightPage frontmatter={{title, description, template: 'splash'}}>
-  <slot />
+  <div class="distr-content">
+    <slot />
+  </div>
 </StarlightPage>
