--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,7 +54,24 @@
     font-family: var(--font-display);
   }
 
-  :root {
+  .distr-content {
     --sl-content-gap-y: 0 !important;
+  }
+
+  .sl-markdown-content {
+    ul,
+    ol {
+      @apply space-y-1;
+      @apply ml-3;
+      @apply list-inside;
+    }
+
+    ul {
+      @apply list-disc;
+    }
+
+    ol {
+      @apply list-decimal;
+    }
   }
 }
