--- a/src/pages/white-paper/building-blocks/index.astro
+++ b/src/pages/white-paper/building-blocks/index.astro
@@ -6,6 +6,8 @@ import CTASection from '../../../components/home/CTASection.astro';
 import {Image} from 'astro:assets';
 import whitepaperImage from '../../../assets/white-paper/building-blocks-teaser.png';
 
+const formsServerBaseUrl = import.meta.env.FORMS_SERVER;
+
 const TITLE = 'Building Blocks for Modern Self-Managed Software Distribution';
 const DESCRIPTION =
   'These building blocks lay the foundation of a successful self-managed software distribution offering that both software vendors and end-customers can depend on.';
@@ -39,7 +41,7 @@ const DESCRIPTION =
 
         <!-- Form -->
         <div class="lg:sticky lg:top-8">
-          <WhitePaperForm client:load />
+          <WhitePaperForm client:load formsServerBaseUrl={formsServerBaseUrl} />
         </div>
       </div>
     </section>
