--- a/src/components/DistrFooter.astro
+++ b/src/components/DistrFooter.astro
@@ -89,7 +89,7 @@ import hyprmcpWhite from '../assets/distr.svg';
           </li>
           <li>
             <a
-              href="/docs/guides/how-to-registry/"
+              href="/docs/guides/"
               class="text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors no-underline">
               Guides
             </a>
